--- a/src/styles/budgetCardStyle.css
+++ b/src/styles/budgetCardStyle.css
@@ -4,6 +4,7 @@
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
     font-weight: 300;
+    flex: 0 0 32.4%;
 }
 
 .budgetCard .card-option{
