--- a/src/styles/budgetCardStyle.css
+++ b/src/styles/budgetCardStyle.css
@@ -4,13 +4,19 @@
     cursor: pointer;
     font-weight: 300;
     flex: 0 0 23.6%;
-    box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.25);
-    -webkit-box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.25);
-    -moz-box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.25);
+    
     position: relative;
     color: #58585d;
+    box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.15);
+    -webkit-box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.15);
+    -moz-box-shadow: 4px 5px 19px 1px rgba(122, 122, 122, 0.15);
 }
 
+.budgetCard,
+.budgetCard .card-body{
+    border: none !important;
+    border-radius: 0 !important;
+}
 
 .budgetCard .card-option{
     position: absolute;
@@ -46,11 +52,6 @@
     color: black;
 }
 
-.budgetCard,
-.budgetCard .card-body{
-    border: none !important;
-    border-radius: 0 !important;
-}
 
 .budgetCard .card-header{
     border-radius: 5px 5px 0 0 !important;
@@ -58,14 +59,29 @@
 }
 
 .budgetCard .progress{
-    height: 5px;
+    height: 6px;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: rgb(214, 214, 214);
+    border-radius: 0 !important;
 }
+
+
 
 .budgetCard .budgetCard-currentExpenses{
     font-weight: 500;
+}
+
+.budgetCard-constant{
+    background-color: hsla(244, 88%, 66%, 0.05) !important;
+}
+
+.budgetCard-constant .constant-hidden{
+    visibility: hidden !important;
+}
+
+.budgetCard-constant .progress-bar{
+    background-color: #665df5 !important;
 }
